trunk/Archive2/43/9ecd4701f280b5/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:26:1: error: too many template parameters in template redeclaration
template<int I,   typename T>
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:3:1: note: previous template declaration is here
template<int I>
^~~~~~~~~~~~~~~
1 error generated.
